--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@umijs/test": "^3.2.7",
     "ahooks": "^2.1.0",
     "lint-staged": "^10.0.7",
+    "phaser": "^3.23.0",
     "pixi.js": "^5.3.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
